--- a/todos/templates/todos/home.html
+++ b/todos/templates/todos/home.html
@@ -12,7 +12,9 @@
         <h2>{{ todo.title }}</h2>
         <p>ID: {{ todo.id }}</p>
         <p>Completed: {{ todo.completed }}</p>
-        <button onclick="set_completed({{ todo.id }})">Выполнено</button>
+        <button onclick="alert('Задача завершена!'); set_completed({{ todo.id }}); ">Выполнено</button>
+
+
     </div>
     {% endfor %}
     <button id="myButton">Нажми меня</button>
