--- a/todos/templates/create_todo.html
+++ b/todos/templates/create_todo.html
@@ -1,7 +1,7 @@
 {% extends "todos/home.html" %}
 
 {% block title %}
-    add todo
+    Добавить задачу
 {% endblock %}
 
 {% block content %}
@@ -10,9 +10,16 @@
     {% csrf_token %}
     <label for="title">Заголовок:</label>
     <input type="text" id="title" name="title" required><br><br>
-    
-    <label for="description">Описание:</label>
-    <textarea id="description" name="description"></textarea><br><br>
+
+    <label for="id">id:</label>
+    <input type="text" id="id" name="id" required><br><br>
+
+    <label for="userId">userId:</label>
+    <input type="text" id="userId" name="userId" required><br><br>
+
+
+    <label for="body">Описание:</label>
+    <textarea id="body" name="body"></textarea><br><br>
     
     <button type="submit">Добавить задачу</button>
   </form>
