--- a/todos/templates/todos.html
+++ b/todos/templates/todos.html
@@ -5,7 +5,7 @@
     {% for todo in todos %}
         <div class="todo">
             <h2>{{ todo.title }}</h2>
-            <p>UserID: {{ todo.userId }}</p>
+            <p>User: {{ todo.user }}</p>
             <p>ID: {{ todo.id }}</p>
             <p>Body: {{ todo.body }}</p>
             <button class="completed-btn" data-id="{{ todo.id }}">Выполнено</button>
