--- a/todos/templates/todo.html
+++ b/todos/templates/todo.html
@@ -2,9 +2,9 @@
 
 {% block content %}
     <div class="todo">
-        <h2>{{ todo.title }}</h2>
-        <p>User: {{ todo.user }}</p>
-        <p>ID: {{ todo.id }}</p>
-        <p>Body: {{ todo.body }}</p>
+        <h2>title: {{ todo.title }}</h2>
+        <p>User_id: {{ todo.user_id }}</p>
+        <p>id: {{ todo.id }}</p>
+        <p>body: {{ todo.body }}</p>
     </div>
 {% endblock %}
