REST| API |CRUD

--- a/todos/templates/todos.html
+++ b/todos/templates/todos.html
@@ -5,7 +5,7 @@
     {% for todo in todos %}
         <div class="todo">
             <h2>title:{{ todo.title }}</h2>
-            <p>User: {{ todo.user }}</p>
+            <p>user_id: {{ todo.user_id }}</p>
             <p>ID: {{ todo.id }}</p>
             <p>Body: {{ todo.body }}</p>
             <button class="completed-btn">Выполнено</button>
