--- a/todos/templates/todos.html
+++ b/todos/templates/todos.html
@@ -1,15 +1,9 @@
+{% extends 'base.html' %}
 
-{% extends "todos/base.html" %}
 
 {% block content %}
     {% for todo in todos %}
-        <div class="todo">
-            <h2>title:{{ todo.title }}</h2>
-            <p>user_id: {{ todo.user_id }}</p>
-            <p>ID: {{ todo.id }}</p>
-            <p>Body: {{ todo.body }}</p>
-            <button class="completed-btn">Выполнено</button>
-            <a href="{% url 'todo' todo.id %}" class="view-btn">Просмотр</a>
-        </div>
+        {% include 'includes/todo.html' %}
     {% endfor %}
+
 {% endblock %}
