--- a/todos/templates/includes/todo.html
+++ b/todos/templates/includes/todo.html
@@ -1,6 +1,6 @@
 <div class="col-sm-6 post-card">
   <div class="card">
-    <div class="card-header style=background-color: #226bac">
+    <div class="card-header">
       <h5 class="card-title">{{todo.title}}</h5>
     </div>
     <div class="card-body">
