--- a/todos/templates/includes/todo.html
+++ b/todos/templates/includes/todo.html
@@ -1,27 +1,26 @@
 <div class="col-sm-6 post-card">
-  <div class="card">
-    <div class="card-header">
-      <h5 class="card-title">{{todo.title}}</h5>
+    <div class="card">
+        <div class="card-header">
+            <h5 class="card-title">{{todo.title}}</h5>
+        </div>
+        <div class="card-body todo-body">
+            <p class="card-text">{{todo.body}}</p>
+            <div class="btn-group">
+                <button class="btn btn-outline-info dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Edit
+                </button>
+                <div class="dropdown-menu" style="background-color: rgba(0,123,255,.25)">
+                    <a class="dropdown-item" style="color: #ffffff; background-color: #69b4ff;" href="{% url 'update_todo' todo_id=todo.id %}" onmouseover="this.style.backgroundColor='#0a79ff';" onmouseout="this.style.backgroundColor='#69b4ff';">Update</a>
+                    <a class="dropdown-item complete-todo" style="color: #ffffff; background-color: #6c757d; cursor: pointer;" data-todo-id="{{ todo.id }}" onmouseover="this.style.backgroundColor='#4e555b';" onmouseout="this.style.backgroundColor='#6c757d';">Complete</a>
+                    <form method="post" action="{% url 'delete_todo' todo_id=todo.id  %}">
+                        {% csrf_token %}
+                        <button class="dropdown-item" style="color: #ffffff; background-color: #f66;" href="#" onmouseover="this.style.backgroundColor='#f30';" onmouseout="this.style.backgroundColor='#f66';">Delete</button>
+                    </form>
+                </div>
+            </div>
+            {% for label in todo.label.all %}
+                <a href="" class="badge badge-info">{{ label.label_name }}</a>
+            {% endfor %}
+        </div>
     </div>
-    <div class="card-body">
-      <p class="card-text">{{todo.body}}</p>
-    <div class="btn-group">
-      <button class="btn btn-outline-info dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Edit
-      </button>
-    <div class="dropdown-menu" style="background-color: rgba(0,123,255,.25)">
-      <a class="dropdown-item" style="color: #ffffff; background-color: #69b4ff;" href="{% url 'update_todo' todo_id=todo.id %}" onmouseover="this.style.backgroundColor='#0a79ff';" onmouseout="this.style.backgroundColor='#69b4ff';">Update</a>
-      <a class="dropdown-item" style="color: #ffffff; background-color: #6c757d;" href="#" onmouseover="this.style.backgroundColor='#4e555b';" onmouseout="this.style.backgroundColor='#6c757d';">Another action</a>
-      <form method="post" action="{% url 'delete_todo' todo_id=todo.id  %}">
-        {% csrf_token %}
-        <button class="dropdown-item" style="color: #ffffff; background-color: #f66;" href="#" onmouseover="this.style.backgroundColor='#f30';" onmouseout="this.style.backgroundColor='#f66';">Delete</button>
-      </form>
-
-    </div>
-
-    </div>
-      <a href="#" class="badge badge-info">Info</a>
-    </div>
-
-  </div>
 </div>
